--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "migrate:create": "typeorm migration:create",
+    "migrate:run": "npm run typeorm migration:run -- -d ./ormconfig.ts",
+    "typeorm": "typeorm-ts-node-esm",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -28,7 +31,8 @@
     "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "mysql": "^2.18.1",
+    "dotenv": "^16.0.3",
+    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
